--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
       defaultmodedoesntwork
     </title>
   </head>
-  <body>
-    <div style="margin:auto; display:table; padding-top: 100px; font-size: 20px;">
-      defaultmodedoesntwork
-    </div>
+  <body style="background-color: #111; position: relative;">
+   
+    
+   
+      <video autoplay loop muted style="width:100%; max-width: 1400px; ">
+        <source src="./hii.mp4" type="video/mp4" />
+
+      </video>
+  
   </body>
 </html>
