--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
       defaultmodedoesntwork
     </title>
   </head>
-  <body style="background-color: #111; position: relative;">
-      <video autoplay loop muted style="width:100%; max-width: 1400px; ">
+  <body style="background-color: #111;">
+    <div style="position: absolute; width:100%; top:0;left:0; z-index: 0;">
+    <img src="fm.png" style="width:100%; "/>
+      <!-- <video autoplay loop muted style="width:100%; max-width: 1400px; ">
         <source src="./hii.mp4" type="video/mp4" />
         <source src="./hii.webm" type="video/webm" />
-      </video>
-  
+      </video> -->
+    </div>
+  <p style="color:#fff; position:absolute; font-size: 49px; margin-left: 10px;" >defaultmodedoesntwork</p>
   </body>
 </html>
