--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <body style="background-color: #111;">
     <div style="position: absolute; width:100%; top:0;left:0; z-index: 0;">
     <img src="fm.png" style="width:100%; "/>
-      <!-- <video autoplay loop muted style="width:100%; max-width: 1400px; ">
-        <source src="./hii.mp4" type="video/mp4" />
-        <source src="./hii.webm" type="video/webm" />
-      </video> -->
     </div>
-  <p style="color:#fff; position:absolute; font-size: 49px; margin-left: 10px;" >defaultmodedoesntwork</p>
-  </body>
+  <p style="color:#fff; position:absolute; font-size: 49px; margin-left: 10px;" >defaultmodedoesntwork<br/>
+    
+      <a href="https://en.wikipedia.org/wiki/Default_mode_network"> 
+      https://en.wikipedia.org/wiki/Default_mode_network
+      </a>
+ 
+
+
+</p>
+</body>
 </html>
