--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br/><br/>
      Reduced blood flow to the PCC and mPFC was observed under the administration of psilocybin. These two areas are considered to be the main nodes of the DMN. One study on the effects of LSD demonstrated that the drug desynchronizes brain activity within the DMN; the activity of the brain regions that constitute the DMN becomes less correlated.
  <br/><br/>
- defaultmodedoesntwork is a podcast on bio-hacking revolving around why the default mode network doesn't work<br/><br/>
+ defaultmodedoesntwork is a podcast on bio-hacking revolving around "default mode network doesn't work"<br/><br/>
  coming soon..
 
 
