--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 </div>
 <h1>1.</h1>
 <p>
-  The Priestess of Love and Keeper of Peace was already a powerful priestess before she became the Third Dweller of the Altar. Born as a priestess with the ability to feel the depths of people's emotions and karma, she was never interested in mundane things like getting married or having children. She found deep connection in the work of healing and restoring balance to the different worlds she visited. <br/><br/>  As part of her Ph.D. thesis, she mothered an orphan robot child. She named him Aqua Regia, after the chemical compound that could dissolve gold and platinum. (As a solution of nitrohydrochloric acid, aqua regia was also used extensively during the chemical milling process where she repaired and refined the robot child's organs and prosthetic limbs.) She hoped Aqua would grow up to become a symbol of love to all who dare to cross paths with him.   <br/><br/>  One day when she was going through her mother's notebooks to look for children's literature for Aqua, she found a blessing written by her great-grandfather in a language unbeknownst to her. And yet she knew in her heart what each word meant.   <br/><br/>
+  default mode doesn't work. <br>
+  <br> to keep ourselves sane we need to know that default mode doesn't work.<br>
+  <br> 
   ...
 </p>
 </div>
