--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>
   default mode doesn't work. <br>
   <br> to keep ourselves sane we need to know that default mode doesn't work.<br>
-  <br> 
+  <br> When things work out, it is often likely that we are not in default mode.
   ...
 </p>
 </div>
