--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <h1>1.</h1>
 <p>
   default mode doesn't work. <br>
-  <br> to keep ourselves sane we need to know that default mode doesn't work.<br>
-  <br> When things work out, it is often likely that we are not in the default mode.
+  <br> to keep ourselves sane one should be reminded that default mode doesn't work.<br>
+  <br> When things are working, it is often likely that they are many abstractions layer above the default mode. <br/><br/> and when it becomes the "new default", that's when improvements can be made.
   ...
 </p>
 </div>
