--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>
   default mode doesn't work. <br>
   <br> to keep ourselves sane one should be reminded that default mode doesn't work.<br>
-  <br> When things are working, it is often likely that they are operating at many abstractions layer above the original default mode. <br/><br/> and when it becomes the "new default", that's a sign that more and more improvements can be made.
+  <br> When things are working, it is often likely that they are operating at many abstractions layer above the original default mode. <br/><br/> and when it becomes the "new default", that's a sign that more improvements can be made.
   ...
 </p>
 </div>
