--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>
   default mode doesn't work. <br>
   <br> to keep ourselves sane one should be reminded that default mode doesn't work.<br>
-  <br> When things are working, it is often likely that they are operating at many abstraction layers above a default mode. <br/><br/> The very notion of something becoming "the new default" would imply that under the current framework new improvements can be made. <br/><br/>
+  <br> When things are working, it is often that they are operating at many abstraction layers above a default mode. <br/><br/> The very notion of something becoming "the new default" would imply that under the current framework new improvements can be made. <br/><br/>
   <br/><br/>
   ...
 </p>
