--- a/programming-languages-are-not-for-humans/index.html
+++ b/programming-languages-are-not-for-humans/index.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-  <scirpt>
+  <script>
     window.location.href =
-    "https://archywillhe.notion.site/Programming-languages-are-not-for-humans-58cc9c8e2f6043b4a2b485852fd3a8af?pvs=4"
-  </scirpt>
+      "https://archywillhe.notion.site/Programming-languages-are-not-for-humans-58cc9c8e2f6043b4a2b485852fd3a8af?pvs=4"
+  </script>
 </body>
 
 </html>
